Performance jumping header and breadcrumbs fix

--- a/packages/scandipwa/src/component/Breadcrumbs/Breadcrumbs.style.scss
+++ b/packages/scandipwa/src/component/Breadcrumbs/Breadcrumbs.style.scss
@@ -10,7 +10,6 @@
  */
 
 :root {
-    --breadcrumbs-height: 40px;
     --breadcrumbs-active-color: #0a0903;
     --breadcrumbs-color: #888;
 }
@@ -19,10 +18,13 @@
     $crumb-padding: 11px;
     $arrow-size: 4px;
 
+    height: var(--breadcrumbs-height);
+
     @include mobile {
         --breadcrumbs-background: #fff;
 
         display: none;
+        height: 0;
     }
 
     &-List {
