--- a/packages/scandipwa/src/component/Menu/Menu.style.scss
+++ b/packages/scandipwa/src/component/Menu/Menu.style.scss
@@ -11,7 +11,6 @@
 
 :root {
     --menu-item-height: 20px;
-    --menu-total-height: 53px;
 }
 
 @mixin subcategory-visible {
